feat: introduce dashboards (#21)
* feat(spec): list dashboards

* feat: list dashboard metrics

* feat: get dashboard metric

* fix: dedup operationId

* feat(http-server-go): add service

* refactor: make it simpler

* style: sort qp

* docs: update changelog
